--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   flutter_launcher_icons: ^0.9.0
+  hexcolor: ^2.0.4
 
 dev_dependencies:
   flutter_test:
